# baanschema-ortools

./: README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
backend/: Dockerfile  main.py  result.json
data/: season.tsv
docs/: editor.html  gold_analysis.json  gold_compare.json  gold_compare_updated.json  gold_result.json  index.html  opponents.json  ortools_06-04-2026.json  ortools_10-05-2026.json  ortools_12-04-2026.json  ortools_17-05-2026.json  ortools_19-04-2026.json  ortools_2026-04-19.json  ortools_2026-05-10.json  ortools_2026-05-17.json  ortools_25-05-2026.json  ortools_31-05-2026.json  ortools_branch_tuning.log.json  ortools_result.json  ortools_status.json  ortools_tuning.json  ortools_tuning_search.progress.json  planner-cheatsheet.md  planningsregels.md  render-grid.js  replan.html  result.json  tuning_report.json
docs/architecture/: README.md
docs/docs/architecture/: 01-system-context.mmd  02-container-diagram.mmd  03-deployment-diagram.mmd  04-ortools-solver-flow.mmd
examples/: replan_status.example.json  simple_case.json
scripts/: analyze_gold.py  build_pages.py  compare_to_gold.py  ortools_planner.py  parse_gold_xlsx.py  replan_day.py  tune_branch_search.py  tune_heuristic.py  tune_ortools_search.py  tune_ortools_weights.py
src/baanschema/: cli.py  model.py
src/baanschema_ortools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_gold_alignment.py  test_planner_rules.py  test_solver.py
